examples/test/testpolicy19856.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19856
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key5: value18
      key28: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value37
      podSelector:
        matchLabels:
          key18: value8
          key3: value49
